Corrected layout issue

--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -61,3 +61,9 @@ body
   .clickable
     color black
     cursor pointer
+
+.footer 
+  padding 30px 10px 0 10px
+  color #CCC
+  width 100%
+  text-align center
